feat: Replace text title with app logo and fix loading timing
- Replace 'COLOR DOT RUSH' text graphics with Gemini generated logo as main title
- Increase logo size and prominence (60% screen width, 25% screen height)
- Fix logo loading timing by making Preloader wait for actual texture loading
- Add immediate logo creation attempts and multiple retry mechanisms
- Update background colors to consistent Dark Slate (#2C3E50) across all scenes
- Replace app icon, splash screen, and logo with new Gemini generated image
- Improve texture loading reliability with proper error handling
- Update subtitle positioning below logo instead of below text title
- Add comprehensive retry logic for logo creation (50ms, 200ms, 500ms delays)
- Maintain responsive design with proper scaling on all screen sizes

This update provides a more professional branded appearance with the logo
serving as the primary visual element on the splash screen.

--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="theme-color" content="#2C3E50" />
-    <title>Color Rush</title>
+    <title>Color Dot Rush</title>
   </head>
 
   <body>
